--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -46,7 +46,7 @@ test:
 
 about:
   home: http://www.gtk.org/
-  license: LGPL-2.1
+  license: LGPL-2.1-or-later
   license_family: LGPL
   license_file: COPYING
   summary: 'bridge for AT-SPI and ATK accessibility technologies'
